[package]
name = "kaspa-ng-chrome"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
browser-extension = ["kaspa-ng-core/browser-extension"]
# default = []
default = ["browser-extension"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-ng-core = { workspace = true, features = ["browser-extension"] }
# kaspa-ng-core = { workspace = true }
kaspa-wallet-core.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-store.workspace = true
workflow-chrome.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
async-trait.workspace = true
kaspa-utils.workspace = true
kaspa-ng-macros.workspace = true
rand.workspace = true
chrome-sys.workspace = true
